[package]
name = "my-rust-neon-project"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
log = "0.4.27"
flexi_logger = "0.30.1"
tokio = {version = "1.44.2", features =["full"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json","chrono"] }
tracing-appender = "0.2.3"
once_cell = "1.21.3"